--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "forage": "^0.3.10",
+    "local": "^0.3.3",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "redux": "^5.0.1",
+    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.2.25",
+    "sass": "^1.75.0",
+    "typescript": "^5.4.5"
   }
 }
